Refactor: Google Code Convention 적용, JavaDoc 추가, Source Refactoring
이슈 연관 파일에 대해
 - Google Code Convention 적용
 - SonaLint, CheckStyle 기반 Code Refactoring
 - 누락된 JavaDoc 추가, Convention 맞게 수정

Resolves: @LIST-227